# koprulu_project

./: .gitignore  Cargo.toml  Makefile  docker-compose.yml
api/: Cargo.toml
api/src/: activity.rs  description.rs  food.rs  hormone.rs  lib.rs  macros.rs  routes.rs  sport.rs  supplement.rs
common/: Cargo.toml
common/src/: app_state.rs  errors.rs  lib.rs  page_names.rs  routes.rs  traits.rs
db_services/: Cargo.toml
db_services/src/: lib.rs  mutations.rs
entities/: Cargo.toml
entities/src/: activities.rs  description.rs  food.rs  hormone.rs  lib.rs  sport.rs  supplement.rs  trigger.rs
entity/: Cargo.toml
entity/src/: activities.rs  description.rs  food.rs  hormone.rs  hormone_trigger.rs  lib.rs  supplement.rs  trigger.rs
handler/src/: hormones.rs
handlers/: Cargo.toml
handlers/src/: contacts.rs  knowledge_base.rs  lib.rs  main_page.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_init_tables.rs  m20240913_153100_create_food_activity_supplement_tables.rs  m20240915_105318_remove_description_as_separated_entity.rs  m20240918_142513_add_trigger_name_field.rs  m20240918_150246_add_sport_table.rs
service/: Cargo.toml
service/src/: mutation.rs  mutations.rs  queries.rs  query.rs
src/: main.rs
static/js/: bootstrap.bundle.js  bootstrap.esm.js  bootstrap.js
templates/: Cargo.toml  base.html  contacts.html  knowledge_base.html  list_of_hormones.html  main_page.html
templates/src/: routes.rs
templates/src/handlers/: contacts.rs  main_page.rs
templates/templates/: base.html  knowledge_base.html  main_page.html
