[package]
name = "koprulu_project"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration", "service", "api"]

[dependencies]
rocket = "0.5.1"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
sea-orm = { version = "1.0.0-rc.5", features = [ "sqlx-postgres", "runtime-tokio", "macros" ] }
serde = "1.0.206"
serde_json = "1.0.122"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tower = "0.5.0"
tower-http = { version = "0.5.2", features = ["trace"] }
env_logger = "0.11.5"
hyper = "1.4.1"
#entity = { path = "entity" }
#migration = { path = "migration" } # depends on your needs
api = { path = "api" }
