[package]
name = "koprulu_project"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entities", "migration", "api", "templates", "common"]

[dependencies]
axum = "0.7.5"
tera = "1.20.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
sea-orm = { version = "1.0.0-rc.5", features = [ "sqlx-postgres", "runtime-tokio", "macros" ] }
serde = "1.0.206"
serde_json = "1.0.122"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tower = "0.5.0"
tower-http = { version = "0.5.2", features = ["trace"] }
env_logger = "0.11.5"
hyper = "1.4.1"

api = { path = "api" }
entity = { path = "entities" }
common = { path = "common" }
templates = { path = "templates" }
