[package]
name = "api"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "api"
path = "src/lib.rs"

[dependencies]
service = { path = "../service" }
tokio = { version = "1.34.0", features = ["full"] }
axum = "0.7.5"
tower = "0.5.0"
tower-http = { version = "0.5.0", features = ["fs"] }
tower-cookies = "0.10.0"
anyhow = "1.0.75"
dotenvy = "0.15.7"
serde = "1.0.193"
serde_json = "1.0.108"
tera = "1.19.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
entity = { path = "../entity" }
migration = { path = "../migration" }

[dependencies.sea-orm]
version = "1.0.0-rc.5" # sea-orm version
features = [
    "debug-print",
    "runtime-tokio-native-tls",
    "sqlx-postgres",
]
