[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
common = { path = "../common" }
axum = "0.7.5"
async-std = { version = "1", features = ["attributes", "tokio1"] }
sea-orm = { version = "1.0.0-rc.5", features = ["macros", "runtime-tokio-rustls"] }
sea-orm-macros = "1.0.0"
serde = { version = "1.0.207", features = ["derive"] }


[dependencies.sea-orm-migration]
version = "1.0.0"
features = ["runtime-tokio-rustls", "sqlx-postgres"]
