[package]
name = "handlers"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "handlers"
path = "src/mod.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
serde = { version = "1.0", features = ["derive"] }


[dependencies.sea-orm-migration]
version = "1.0.0"
features = ["runtime-tokio-rustls", "sqlx-postgres"]
