[package]
name = "service"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "service"
path = "src/lib.rs"

[dependencies]
entity = { path = "../entity" }
common = { path = "../common" }

[dependencies.sea-orm]
version = "1.0.0-rc.5" # sea-orm version
features = [
    "debug-print",
    "runtime-tokio-native-tls",
    "sqlx-postgres",
]

[dev-dependencies]
tokio = { version = "1.34.0", features = ["macros", "rt"] }
