[package]
name = "templates"
version = "0.1.0"
edition = "2021"

[lib]
name = "templates"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }
axum = "0.7.5"
serde = "1.0.193"
serde_json = "1.0.108"
tera = "1.20.0"
entity = { path = "../entities" }
migration = { path = "../migration" }
common = { path = "../common" }

[dependencies.sea-orm]
version = "1.0.0-rc.5" # sea-orm version
features = [
    "debug-print",
    "runtime-tokio-native-tls",
    "sqlx-postgres",
]
